# starting

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
src/myapp_backend/: Cargo.toml  myapp_backend.did
src/myapp_backend/src/: lib.rs  user.rs
src/myapp_frontend/: package.json
src/myapp_frontend/src/: App.jsx
