[package]
name = "myapp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bip39 = "2.1.0"
bitcoin = "0.32.5"
candid = "0.10.12"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
serde = { version = "1.0", features = ["derive"] }

